Fixes off-canvas menu height issue.
Turns out that the menu was still being truncated in certain
circumstances. (Could recreate problem by going to the (currently
unfinished #show view.)

Amended style sheet, applied 100% height property rule to
.off-canvas-wrapper, and .off-canvas-wrapper.inner.

This appears to have fixed the issue completely.

Closes #20

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,8 +22,7 @@
 // Main
 
 #main {
-  padding: 2em;
-}
+  padding: 2em;}
 
 #page-title {
   font-size: 2em;
@@ -34,7 +33,8 @@
 
 // Off-Canvas Menu
 
-#offCanvasLeft {
+.off-canvas-wrapper,
+.off-canvas-wrapper-inner {
   height: 100%
 }
 
